samples/_failures_safe/1761162665_9379e3_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_79d73610.c: In function ‘main’:
./samples/SAFE/__tmp_79d73610.c:158:5: error: expected declaration or statement at end of input
  158 |     } else {
      |     ^
./samples/SAFE/__tmp_79d73610.c:158:5: error: expected declaration or statement at end of input
